# radiative_transfer-plasmoids

./: README.md  initial_conditions.h  initial_conditions_lepto_hadronic.h  initial_conditions_leptonic.h  leptonic.c  leptonic_multiple_plasmoids.c  leptonic_plasmoids.c  leptonic_results.py  physical_constants.h  pyproject.toml  results.py
leptonic_version_results/: README.md  __init__.py  log_10_electron_Lorentz_factor_array.txt  log_10_photon_frequency_array.txt  particle_conservation_check.txt  particle_conservation_check_plasmoid_1.txt
plasmoid_properties/: README.md  plasmoid_1_Lorentz_factor.txt  plasmoid_1_transverse_size.txt  plasmoid_1_volume.txt  plasmoid_1_volume_derivative.txt  plasmoid_avg_particle_num_density.txt
required_tables/: README.md  anti_electron_neutrino_production_numerical_values_photo_hadronic_interactions.txt  anti_muon_neutrino_production_numerical_values_photo_hadronic_interactions.txt  electron_neutrino_production_numerical_values_photo_hadronic_interactions.txt  electron_production_numerical_values_photo_hadronic_interactions.txt  muon_neutrino_production_numerical_values_photo_hadronic_interactions.txt  photon_production_numerical_values_photo_hadronic_interactions.txt  positron_production_numerical_values_photo_hadronic_interactions.txt
results/: log_10_electron_Lorentz_factor_array.txt  log_10_frequency_values.txt
