[tool.poetry]
name = "radiative_transfer"
version = "0.1.0"
description = ""
authors = ["Ian Christie <ichristi231@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
matplotlib = "^3.1"
pathlib = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
